--- a/index.html
+++ b/index.html
@@ -7,11 +7,43 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!--HEADER-->
+      <nav id="header" class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+        <img src="imagenes/covid.png" width="150" height="150" class="d-inline-block align-top" alt="" loading="lazy">
+        </a>
+        <h1 class="mr-auto">COVID-19</h1>
+      </nav>
+      <nav id="menu" class="navbar navbar-expand-lg navbar-light bg-primary">
+        <a class="navbar-brand" href="#">Coronavirus</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbar">
+          <ul class="navbar-nav ml-auto">
+           <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Que es</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Sintomas</a>
+           </li>
+           <li class="nav-item">
+              <a class="nav-link" href="#">Cuidados</a>
+           </li>
+           <li class="nav-item">
+              <a class="nav-link" href="#">Colombia</a>
+           </li>
+          </ul>
+        </div>
+      </nav>
+    <!--/HEADER-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
