--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
               proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <div class="offset-8 pb-2">
-                <a href="" class="btn btn-primary">Casos</a>
+                <a href="casos.html" class="btn btn-primary">Casos</a>
                 <a href="https://coronaviruscolombia.gov.co/Covid19/estadisticas-covid-
                 19/comportamiento-covid-19.html" class="btn btn-primary">Ver más</a>
               </div>
